# PointPainting

./: .gitignore  KittiCalibration.py  KittiVideo.py  README.md  bev_utils.py  bisenet_onnx.py  dataset.py  demo.py  demo_video.py  links.txt  pointPaintingNode.py  pointpainting.py  speed_test.txt  tensorrt_bisenet.py  test.py  testnode.py  train.py  utils.py  visualization.py  visualizer.py
BiSeNetv2/: BiseNet_Train.ipynb  visualization.py
BiSeNetv2/.ipynb_checkpoints/: BiseNet_Train-checkpoint.ipynb
BiSeNetv2/checkpoints/tensorboard/: events.out.tfevents.1621226826.9bf2a0cb64da.249.0
BiSeNetv2/utils/: label.py  utils.py
checkpoints/: logging
docker/: README.md  dockerfile  ros2_entrypoint.sh
model/: BiseNetv2.py  DDRNet_23_slim.py  ohem_loss.py
point_painting/: package.xml  setup.cfg  setup.py
point_painting/launch/: point_painting_launch.py
point_painting/point_painting/: Calibration.py  KittiCalibration.py  KittiVideo.py  Video.py  bev_utils.py  bisenet_onnx.py  demo.py  lidar_camera_front_extrinsic.json  paintLidarLaunch.py  pointPaintingNode.py  pointpainting.py  tensorrt_bisenet.py  top_center_lidar-to-center_camera-extrinsic.jsonZone.Identifier  utils.py  visualizer.py
point_painting/point_painting/BiSeNetv2/: BiseNet_Train.ipynb  README.md  config.py  dataset.py  demo.py  (+2 more)
point_painting/point_painting/tensorrt_inference/: CMakeLists.txt  README.md  convert_onnx_to_engine.cpp  main.cpp
point_painting/point_painting/tensorrt_inference/cuda_kernels/: pointpainting_cuda.cu
point_painting/point_painting/tensorrt_inference/include/: PointPainting.h  kernel_launch.h  pointcloud_io.h  visualization.h
point_painting/point_painting/tensorrt_inference/src/: BisenetTensorRT.cpp  pointcloud_io.cpp
tensorrt_inference/: CMakeLists.txt  README.md  argmax_cuda.cu  argmax_cuda.h  convert_onnx_to_engine.cpp  main.cpp
tensorrt_inference/cuda_kernels/: argmax_cuda.cu  pointpainting_cuda.cu
tensorrt_inference/include/: BisenetTensorRT.h  PointPainting.h  kernel_launch.h  pointcloud_common.h  visualization.h
tensorrt_inference/src/: BisenetTensorRT.cpp  PointPainting.cpp
testfiles/: pointPaintingNodeopen.py  testnode.py
utils/: label.py  utils.py
(+1 files in other folders)
